Better error handling when loading cert and key

BUG: 405207